--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,9 @@ body {
   box-shadow: 0 0 20px white;
   background-color: grey;
 }
+
+@media only screen and (max-width: 600px) {
+ .fixer{
+   margin-left: -15px;
+  }
+}
