--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,7 @@ body {
   background-color: grey;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (min-width: 768px) {
  .fixer{
    margin-left: 104px;
   }
